--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -29,7 +29,8 @@ h3,
 h4,
 h5,
 h6 {
-  color: blacklavender;
+  color: black
+  ;
   font-weight: 700;
   line-height: 1.2;
   margin: 2.25rem 0 1.125rem;
