--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -19,11 +19,11 @@ $color-blockquote-border:      #28aaff !default;
 
 // Buttons
 $color-btn:                    #fff !default;
-$color-btn-bg:                 #28aaff !default;
-$color-btn-border:             #28aaff !default;
-$color-btn-alt:                #28aaff !default;
+$color-btn-bg:                 #af7741 !default;
+$color-btn-border:             #af7741 !default;
+$color-btn-alt:                #af7741 !default;
 $color-btn-alt-bg:             transparent !default;
-$color-btn-alt-border:         #28aaff !default;
+$color-btn-alt-border:         #af7741 !default;
 $color-btn-clear:              #282f36 !default;
 
 // Navigation
@@ -37,9 +37,9 @@ $color-inverse-heading:        #fff !default;
 $color-inverse-bg:             #005bc4 !default;
 $color-inverse-link:           #f5f6f7 !default;
 $color-inverse-btn:            #fff !default;
-$color-inverse-btn-bg:         #28aaff !default;
-$color-inverse-btn-border:     #28aaff !default;
-$color-inverse-btn-alt:        #28aaff !default;
+$color-inverse-btn-bg:         #af7741 !default;
+$color-inverse-btn-border:     #af7741 !default;
+$color-inverse-btn-alt:        #af7741 !default;
 $color-inverse-btn-alt-bg:     #fff !default;
 $color-inverse-btn-alt-border: #fff !default;
 $color-inverse-btn-clear:      #fff !default;
