--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
 // Base
-$color-text:                   #5 !default;
+$color-text:                   #fff !default;
 $color-heading:                #282f36 !default;
 $color-meta:                   #8594a5 !default;
 $color-bg:                     #fff !default;
