--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -9,7 +9,7 @@ $color-bg-overlay:             rgba(245,246,247,.8) !default;
 $color-border:                 #e1e4e9 !default;
 
 // Links
-$color-link:                   #28aaff !default;
+$color-link:                   #e2bb79 !default;
 
 // Blockquotes
 $color-blockquote:             #282f36 !default;
