--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -13,7 +13,7 @@ $color-link:                   #e2bb79 !default;
 
 // Blockquotes
 $color-blockquote:             #282f36 !default;
-$color-blockquote-border:      #28aaff !default;
+$color-blockquote-border:      #e2bb79 !default;
 
 // Buttons
 $color-btn:                    #fff !default;
