--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -18,7 +18,7 @@ $color-blockquote-border:      #e2bb79 !default;
 // Buttons
 $color-btn:                    #fff !default;
 $color-btn-bg:                 #28aaff !default;
-$color-btn-border:             #e2bb79 !default;
+$color-btn-border:             #af7741 !default;
 $color-btn-alt:                #28aaff !default;
 $color-btn-alt-bg:             transparent !default;
 $color-btn-alt-border:         #28aaff !default;
