--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -19,9 +19,9 @@ $color-blockquote-border:      #e2bb79 !default;
 $color-btn:                    #fff !default;
 $color-btn-bg:                 #af7741 !default;
 $color-btn-border:             #af7741 !default;
-$color-btn-alt:                #28aaff !default;
+$color-btn-alt:                #af7741 !default;
 $color-btn-alt-bg:             transparent !default;
-$color-btn-alt-border:         #28aaff !default;
+$color-btn-alt-border:         #af7741 !default;
 $color-btn-clear:              #282f36 !default;
 
 // Navigation
