--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -3,7 +3,7 @@
 $color-text:                   #fff !default;
 $color-heading:                #282f36 !default;
 $color-meta:                   #fff !default;
-$color-bg:                     #fff !default;
+$color-bg:                     #000 !default;
 $color-bg-alt:                 #f5f6f7 !default;
 $color-bg-overlay:             rgba(245,246,247,.8) !default;
 //$color-bg-overlay:             rgba(0,0,0,1) !default;
