--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -32,7 +32,7 @@ $color-nav-link-hover:         #28aaff !default;
 $color-nav-link-active:        #28aaff !default;
 
 // Inverse (light text on dark background)
-$color-inverse-text:           #f5f6f7 !default;
+$color-inverse-text:           fff#f5f6f7 !default;
 $color-inverse-heading:        #fff !default;
 $color-inverse-bg:             #005bc4 !default;
 $color-inverse-link:           #f5f6f7 !default;
