--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -32,7 +32,7 @@ h6 {
   color: whitesmoke;
   font-weight: 700;
   line-height: 1.2;
-  margin: 2.25rem 0 1.125remlavender;
+  margin: 2.25rem 0 1.125rem;
 
   &:first-child {
     margin-top: 0;
