_header.scss: changed

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -55,7 +55,7 @@
 @include media-breakpoint-down(md) {
   .navbar {
     &:after {
-      background: $color-bg-overlay;
+      //background: $color-bg-overlay;
       content: "";
       height: 100vh;
       left: 0;
