--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -56,6 +56,7 @@
   .navbar {
     &:after {
       //background: $color-bg-overlay;
+      background: $color-bg-overlay;
       content: "";
       height: 100vh;
       left: 0;
