--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -6,7 +6,7 @@ input[type="submit"],
 input[type="button"],
 input[type="reset"],
 .btn {
-  background-color:#8d944b;
+  background-color:#b9c92d;
   border: 2px solid $color-btn-border;
   border-radius: 5px;
   box-sizing: border-box;
