_variables.scss: changed

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -27,7 +27,7 @@ $color-btn-alt-border:         #af7741 !default;
 $color-btn-clear:              #282f36 !default;
 
 // Navigation
-$color-nav-link:               #536171 !default;
+$color-nav-link:               #af7741 !default;
 $color-nav-link-hover:         #28aaff !default;
 $color-nav-link-active:        #28aaff !default;
 
