_variables.scss: changed

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -28,7 +28,7 @@ $color-btn-clear:              #282f36 !default;
 
 // Navigation
 $color-nav-link:               #af7741 !default;
-$color-nav-link-hover:         #af7741 !default;
+$color-nav-link-hover:         #d8700e !default;
 $color-nav-link-active:        #28aaff !default;
 
 // Inverse (light text on dark background)
