_variables.scss: changed

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -29,7 +29,7 @@ $color-btn-clear:              #282f36 !default;
 // Navigation
 $color-nav-link:               #af7741 !default;
 $color-nav-link-hover:         #d8700e !default;
-$color-nav-link-active:        #d84e0e !default;
+$color-nav-link-active:        #da5f26 !default;
 
 // Inverse (light text on dark background)
 $color-inverse-text:           #fff !default;
