--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -30,7 +30,7 @@ h4,
 h5,
 h6 {
   //color: #fcba03;
-  color: #fcba03;
+  color: ;
   font-weight: 700;
   line-height: 1.2;
   margin: 2.25rem 0 1.125rem;
